--- a/DigitalVote/packages.config
+++ b/DigitalVote/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net472" />
   <package id="Emgu.CV" version="4.7.0.5276" targetFramework="net472" />
   <package id="Emgu.CV.Bitmap" version="4.7.0.5276" targetFramework="net472" />
   <package id="ProgressBar" version="1.0.10" targetFramework="net472" />
