--- a/DigitalVote/packages.config
+++ b/DigitalVote/packages.config
@@ -3,6 +3,7 @@
   <package id="AForge" version="2.2.5" targetFramework="net472" />
   <package id="Emgu.CV" version="4.7.0.5276" targetFramework="net472" />
   <package id="Emgu.CV.Bitmap" version="4.7.0.5276" targetFramework="net472" />
+  <package id="Guna.UI2.WinForms" version="2.0.4.4" targetFramework="net472" />
   <package id="ProgressBar" version="1.0.10" targetFramework="net472" />
   <package id="RoundCornerProgressBar" version="1.0.0.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="7.0.0" targetFramework="net472" />
